# mosaite

./: .gitignore  README.md  flake.nix  main.py  main.tcss
POC/front/: README.md  package-lock.json  package.json
POC/front/src/: App.js
backend/: README.md  conftest.py  pytest.ini  requirements.txt
backend/accounts/: apps.py  urls.py
backend/apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/chat/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/config/: admin.py  apps.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/dash/: apps.py  serializers.py  views.py
backend/apps/trans/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/backapi/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/consultorIA/: examples.json
backend/daily/: main.py
backend/mosaite/: apps.py
consultorIA/: README.md  examples.json  modelo.py  pipeline.py  pyproject.toml  requirements.txt  schema.txt  test.py
consultorIA/consultoria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/front/: README.md  package-lock.json  package.json
manual/: main.tex
manual/cap/: cap1.tex  cap2.tex
manual/chapters/: faq.tex  glosario.tex  herramientas_ia.tex  interfaz.tex  libros_diarios.tex  primeros_pasos.tex  roles_permisos.tex  transacciones.tex
manual/other/: intro.tex  portada.tex
tui/: app.py  constants.py  logic.py  screens.py
(+128 files in other folders)
