[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consultoria"
version = "0.1.1"
description = "Módulo de utilidades para traducción de Lenguaje Natural a SQL"
authors = [
    { name = "Luis", email = "luantorv@gmail.com" }
]
dependencies = [
    "llama-cpp-python",
    "sentence-transformers"
]
